kong_migration_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kong-migration-deployment
  name: kong-migration-deployment
  namespace: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong-migration-deployment
  template:
    metadata:
      annotations:
        kuma.io/gateway: enabled
        prometheus.io/port: "8100"
        prometheus.io/scrape: "true"
        traffic.sidecar.istio.io/includeInboundPorts: ""
      labels:
        app: kong-migration-deployment
    spec:
      imagePullSecrets:
        - name: docker-registry
      containers:
      - name: kong-migration-deployment
        image: kong:latest
        imagePullPolicy: IfNotPresent
        command: ["/bin/sh", "-c", "kong migrations bootstrap --vv && kong migrations up && kong migrations finish"]
        #command: ["/bin/sh", "-c", "kong migrations bootstrap --vv"]
