konga_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: konga
  namespace: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: konga
  template:
    metadata:
      labels:
        name: konga
        app: konga
    spec:
      containers:
      - name: konga
        image: pantsel/konga:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 1337
          protocol: TCP
