konga_prepare_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: konga-prepare
  namespace: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: konga-prepare
  template:
    metadata:
      labels:
        name: konga-prepare
        app: konga-prepare
    spec:
      containers:
      - name: konga-prepare
        image: pantsel/konga:latest
        command: ["/bin/sh", "-c", "node ./bin/konga.js prepare -a postgres --uri postgresql://kong:kong@10.60.156.162:5432/konga"]
        imagePullPolicy: IfNotPresent
