motel_api_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: motel-api-deployment
  labels:
    app: motelapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: motelapi
  template:
    metadata:
      labels:
        app: motelapi
    spec:
      imagePullSecrets:
        - name: docker-registry
      containers:
      - name: motelapi
        image: motel-api:non-root-production
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
