kong_admin_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-admin
  namespace: kong
spec:
  ports:
  - name: admin
    protocol: TCP
    port: 8001
    targetPort: 8001
  - name: admin-ssl
    protocol: TCP
    port: 8444
    targetPort: 8444
  selector:
    app: ingress-kong
  externalIPs:
  - 10.60.156.166
