kong_proxy_svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
    service.beta.kubernetes.io/aws-load-balancer-type: "Internal"
  name: kong-proxy
  namespace: kong
spec:
  ports:
  - name: proxy
    port: 8000
    protocol: TCP
    targetPort: 8000
    nodePort: 8556
  - name: proxy-ssl
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: ingress-kong
  type: LoadBalancer
