konga_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: konga
  name: konga-service
  namespace: kong
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8005
      targetPort: 1337
  selector:
    app: konga
