motel_api_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: motel-api-service
  labels:
    app: motelapiservice
spec:
  ports:
  - port: 8080
    name: http
    targetPort: 8080
  selector:
    app: motelapi
