postgres_endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: kong-database
subsets:
  - addresses:
      - ip: 10.60.156.162
    ports:
      - port: 5432
