postgres_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-db
  namespace: kong
spec:
  ports:
  - port: 5432
  selector:
    app: postgresql-db
    #clusterIP: None
