kong_ingress_admin.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  #annotations:
    #kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: kong-admin
  namespace: kong
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: kong-admin
          servicePort: 8001
