konga_svc_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: konga
  namespace: kong
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: konga-service
          servicePort: 443
        path: /
