motel_api_svc_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: motel-api-service
  namespace: default
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: motel-api-service
          servicePort: 8080
